--- a/index.html
+++ b/index.html
@@ -2,10 +2,10 @@
 <html>
 	<head>
 		<script src="ext/gl-matrix.js"></script>
-		<script src="GVT_Src_vertexData_sphere.js"></script>
-		<script src="GVT_Src_vertexData_torus.js"></script>
-		<script src="GVT_Src_vertexData_plane.js"></script>
-		<script src="TFM_Src_tpl.js"></script>
+		<script src="vertexData_sphere.js"></script>
+		<script src="vertexData_torus.js"></script>
+		<script src="vertexData_plane.js"></script>
+		<script src="script.js"></script>
 		<script type="x-shader/x-vertex" id="vertexshader">
 			attribute vec3 aPosition;
 			attribute vec3 aNormal;
