--- a/index.html
+++ b/index.html
@@ -12,14 +12,20 @@
 
         uniform mat4 uPMatrix;
         uniform mat4 uMVMatrix;
+        uniform vec4 uColor;
+        uniform mat3 uNMatrix;
 
         varying vec4 vColor;
 
         void main(){
         gl_Position = uPMatrix * uMVMatrix * vec4(aPosition, 1.0);
+        vec3 tNormal = uNMatrix * aNormal;
 
         vColor = vec4(aNormal.x, aNormal.y, aNormal.z, 1.0);
+        vColor = vec4(aNormal.z, aNormal.z, aNormal.z, 1.0);
+        vColor = vec4(tNormal.z, tNormal.z, tNormal.z, 1.0);
         vColor = (vColor + 1.0) / 2.0;
+        vColor = uColor * (vColor + 1.0) / 2.0;
         }
     </script>
     <script type="x-shader/x-fragment" id="fragmentshader">
